src/components/sections/latestProjects/LatestProjects.module.css
.content {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    max-width: 1280px;
    margin: 0 auto;
}

#gifty {
    flex-direction: row;   
}

.details {
    width: 100%;
    max-width: 450px;
}

.screen {
    width: 70%;
    max-width: 350px;
}

.screen img {
    width: 100%;
    max-width: 350px;
    margin: 16px auto;
}

.title i {
    font-size: 20px;
    padding: 8px;
    border-radius: 50%;
    color: #ff4900;       
    background-color: rgb(255, 238, 228);
}

.title span {
    font-size: 18px;
    font-weight: bold;
    color: #ff4900;
    margin-left: 16px;       
}

.intro {
    font-size: 28px;
    font-weight: 400;
    color: #32325D;
}

.links {
    margin-top: 32px;
}

.links a {
    text-decoration: none;    
    
}

.links p:first-of-type {
    margin-right: 48px;
}

.links p i {
    margin-left: 8px;
}

@media (min-width: 960px) and (max-width: 1176px) {
    .details {
        width: 45%;
        max-width: 450px;
        margin-left: 5%;
    }
    
    .screen {
        width: 45%;
        max-width: 450px;
        margin-right: 5%;
    }
}

@media (max-width: 959px) {
    .content {
        flex-direction: column-reverse;
    }
}

